--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             fetch('http://www.boredapi.com/api/activity/')
                 .then(res => res.json())
                 .then(data => {
-                    const user = data.results[0];
-                    const userName = 
+                    document.getElementById('activity').innerText = data.activity;
                 })
         }
         doSomething();
